# Project_JIPP2

./: CMakeLists.txt  Help.cpp  README.md  SavingsAcc.cpp
include/: Account.h  Accounts.h  Bank.h  CurrentAcc.h  CurrentAccount.h  Customer.h  Help.h  Help_place.h  Manager.h  Person.h  SavingAccount.h  Savings.h  SavingsAcc.h  Taxes.h  Test.h
src/: Account.cpp  Accounts.cpp  Bank.cpp  CurrentAcc.cpp  CurrentAccount.cpp  Customer.cpp  Help.cpp  Help_place.cpp  Manager.cpp  Person.cpp  SavingAccount.cpp  Savings.cpp  SavingsAcc.cpp  Taxes.cpp  Test.cpp  main.cpp
